syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";

option go_package = "./pb";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {
    option (google.api.http) = {
      post: "/v1/verify"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/refresh"
      body: "*"
    };
  }
  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/v1/logout"
      body: "*"
    };
  }
}

message LoginRequest {
  string code = 1;
}

message LoginResponse {
  string user_id = 1;
  string access_token = 2;
}

message VerifyTokenRequest {}

message VerifyTokenResponse {
  string user_id = 1;
}

message RefreshTokenRequest {}

message RefreshTokenResponse {
  string access_token = 1;
}

message LogoutRequest {}

message LogoutResponse {}
